# personal-financial-assistant

./: .pre-commit-config.yaml  database.db  pyproject.toml
src/app/: main.py
src/app/user_management/: models.py  repositories.py  services.py  views.py
src/infrastructure/database/: utils.py
tests/: conftest.py
tests/app/user_management/: test_repositories.py  test_views.py
