[tool.poetry]
name = "personal-financial-assistant"
version = "0.1.0"
description = ""
authors = ["alfmorais <alfredneto@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
sqlmodel = "^0.0.22"
uvicorn = "^0.34.0"
pydantic = {extras = ["email"], version = "^2.10.4"}

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.8.4"
ipdb = "^0.13.13"
pre-commit = "^4.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]
ignore = ["PLR6301", "PT003", "PT011", "PT006"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"
asyncio_mode = "auto"

[tool.taskipy.tasks]
format = "ruff check . --fix && ruff format ."
lint = "ruff check . && ruff check . --diff"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
